# DJI_psdk_link

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hal/: hal_uart.c  hal_uart.h
src/fake_controller/: CMakeLists.txt
src/fake_controller/include/: fake_controller.hpp  fake_rc_pub.hpp
src/fake_controller/launch/: fake_controller.launch  fake_controller.rviz
src/fake_controller/src/: fake_controller.cpp  fake_rc_pub.cpp
src/psdk/: CMakeLists.txt
src/psdk/include/: psdk_node.hpp  udp_comm.h
src/psdk/launch/: psdk.launch
src/psdk/src/: hal_uart.c  p_link.cpp  p_link_cmp.cpp  psdk_node (copy).cpp  psdk_node.cpp  udp_comm.cpp
src/psdk_msgs/: CMakeLists.txt  package.xml
